# PoC-Deployer-System

./: LICENSE  README.md  README_EN.md  binder.md  claude.md  settings.gradle
app/: build.gradle  lint-baseline.xml  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/wqry085/deployesystem/: AboutActivity.java  AppDetailActivity.java  AppSelectorBottomSheet.java  AuthorizationListFragment.java  HelpActivity.java  HelpFragment.java  IconAnimationDemo.java  LanguageHelper.java  MaterialDialogHelper.java  PluginAdapter.java  PluginFragment.java  PluginItem.java  PolicyClient.java  SettingsActivity.java  SettingsFragment.java  SnowflakeView.java  TerminalActivity.java  TerminalSession.java  TerminalView.java  ThemeHelper.java  TwrpUnlockActivity.java  WhitelistManager.java  ZygoteActivity.java  ZygoteArguments.java  ZygoteFragment.java  hellodream.java  payloadtext.java
app/src/main/java/com/wqry085/deployesystem/next/: Binder.java  BootLoader.java  CopyAppData.java  LogView.java  ZygoteLog.java  init_kernel.java  runpayload.java
app/src/main/java/com/wqry085/deployesystem/sockey/: ControlCommands.java  FolderReceiver.java  ZygoteControlClient.java  ZygoteControlListener.java
app/src/main/jni/: Android.mk  CMakeLists.txt  app_process_launcher.c  app_process_launcher.h  binder.c  policy_client.c  policy_client.h  policy_daemon.c  socket_sender.c  socket_sender.h  terminal-wqry.c  zygote_nc.c  zygote_term.c
app/src/main/res/anim/: pulse.xml
app/src/main/res/animator/: arrow_drop.xml  bracket_fade_in.xml  dot1_blink.xml  dot2_blink.xml  dot3_blink.xml  dot4_blink.xml  dot5_blink.xml  dot_blink.xml  z_fade_in.xml
app/src/main/res/drawable/: edit_text_background.xml  ic_arrow_forward.xml  ic_gear.xml  ic_launcher_animated.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_splash_animated.xml  twrp_seekbar_thumb.xml  twrp_seekbar_track.xml
app/src/main/res/layout/: activity_app_detail.xml  activity_help.xml  activity_main.xml  activity_settings.xml  activity_terminal.xml  activity_twrp_unlock.xml  appdir.xml  bottom_sheet_app_selector.xml  fragment_authorization_list.xml  fragment_help.xml  fragment_plugin.xml  item_app.xml  item_app_info.xml  item_plugin.xml  layout_main.xml  preference_widget_switch_compat.xml  zygote_activity.xml  zygote_log.xml
app/src/main/res/menu/: bottom_nav_menu.xml  menu_art.xml
app/src/main/res/raw/: payload.txt  payload1213.txt
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/main/res/xml/: root_preference.xml  server_preferences.xml  settings.xml
terminal-emulator/: build.gradle
terminal-view/: build.gradle
